--- a/style.css
+++ b/style.css
@@ -33,16 +33,35 @@ header {
 section {
   padding: 100px 200px;
 }
-.logo-img {
-  width: 180px;
+.laws-section {
+  background-color: #101010;
+  padding: 4.8rem 0 9.6rem 0;
 }
 
+.Laws {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 70px;
+  gap: 64px;
+  max-width: 1300px;
+  margin: 0 auto;
+}
+.title {
+  display: flex;
+  justify-content: center;
+  color: #6fe56f;
+  font-size: 2.4em;
+  font-weight: 800;
+}
+section {
+  padding: 100px 200px;
+}
 .main {
   width: 100%;
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background: url(imags/pexels-rodolfo-clix-1366942.jpg) no-repeat;
+  background-color: #101010;
   background-attachment: fixed;
   background-position: center;
   justify-content: center;
@@ -50,8 +69,8 @@ section {
   text-align: center;
 }
 .main h2 {
-  color: #ffffff;
-  font-size: 22.4px;
+  color: #6fe56f;
+  font-size: 1.4em;
   font-weight: 500;
   white-space: nowrap;
 }
@@ -59,18 +78,11 @@ section {
   display: inline-block;
   margin-top: 30px;
   color: #ffffff;
-  font-size: 40px;
+  font-size: 2.5em;
   font-weight: 900;
-}
-
-.main h3 {
-  color: #6fe56f;
-  font-size: 1.5em;
-  font-weight: 700;
-  letter-spacing: 1px;
-  margin-top: 30px;
   margin-bottom: 30px;
 }
+
 .main-btn {
   color: #101010;
   background-color: #fff71a;
@@ -85,47 +97,13 @@ section {
   font-size: 1em;
 }
 .main-btn:hover {
-  background-color: #e5de18;
+  background-color: #e5de18f0;
   transform: scale(1.1, 1.1);
-}
-
-.icon {
-  color: #ffffff;
-  font-size: 1.7em;
-  padding-right: 15px;
-  transition: 0.7s ease;
-  scroll-behavior: smooth;
-}
-
-.website-section {
-  background-color: #101010;
-  text-align: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.title {
-  display: flex;
-  justify-content: center;
-  color: #fff71a;
-  font-size: 38.4px;
-  font-weight: 550;
-}
-
-.About-website-p-1 {
-  display: flex;
-  justify-content: center;
-  font-size: 24px;
-  font-weight: 500;
-  padding: 30px 50px;
-  text-align: center;
-  color: #ffffff;
-  line-height: 50px;
 }
 .title-2 {
   display: flex;
   justify-content: center;
-  color: #4699f5;
+  color: #6fe56f;
   font-size: 2.4em;
   font-weight: 700;
   margin-bottom: 30px;
@@ -151,11 +129,6 @@ section {
 .card-1:hover {
   transform: scale(1.1);
 }
-
-.icon-2 {
-  width: 100%;
-  text-align: center;
-}
 .info {
   text-align: center;
   padding: 1em;
@@ -171,113 +144,56 @@ section {
 .info a:hover {
   color: #4699f5;
 }
-.img-logo {
-  background-color: #101010;
-  padding: 4.8rem 0 9.6rem 0;
+.link {
+  margin-top: 30px;
 }
-.imgs-logo {
+.teitch-cards-2 {
+  background-color: #101010;
+}
+.title-3 {
   display: flex;
   justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
+  color: #fff71a;
+  font-size: 2.4em;
+  font-weight: 700;
+  margin-bottom: 30px;
 }
-.card {
-  background-color: #101010;
-  width: 40em;
-  box-shadow: 0 5px 25px #4698f5a4;
-  border-radius: 10px;
-  padding: 15px;
-  margin: 15px;
-  min-height: 14px;
-  transition: 0.7s ease;
+.title-4 {
+  display: flex;
+  justify-content: center;
+  color: #4699f5;
+  font-size: 2.4em;
+  font-weight: 700;
+  margin-bottom: 30px;
 }
-.card:hover {
-  transform: scale(1.1);
-}
-.icon-3 {
-  width: 100%;
+.info-2 {
   text-align: center;
+  padding: 1em;
+}
+.info-2 a {
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: 10px;
+  color: #101010;
+  text-decoration: none;
 }
 
-.footer {
-  background-color: #101010;
-  color: #ffffff;
-  padding: 32px;
-  display: flex;
-  justify-content: center;
-}
-.footer-titl {
-  font-size: 20.8px;
-  font-weight: 600;
+.info-2 a:hover {
+  color: #6fe56f;
 }
 
-@media (max-width: 1023px) {
-  .header {
-    padding: 12px 20px;
-  }
-  .navigation a {
-    padding-left: 10px;
-    font-size: 15px;
-  }
-  section {
-    padding: 80px 20px;
-  }
-  .logo-img {
-    width: 90px;
-  }
-  .main-btn {
-    padding: 1em 1.5em;
-    border-radius: 10px;
-    margin-bottom: 10px;
-  }
-  main h2 {
-    font-size: 18.4px;
-  }
-  main h2 span {
-    font-size: 30px;
-  }
-  .main h3 {
-    font-size: 0.9em;
-  }
-  .icon {
-    font-size: 1em;
-    padding-right: 10px;
-  }
-  .title {
-    font-size: 30px;
-  }
-  .About-website-p-1 {
-    font-size: 15.5px;
-    font-weight: 250;
-  }
-  .website-img {
-    width: 50%;
-  }
-  .title-2 {
-    font-size: 1em;
-  }
-  .website-section {
-    padding: 80px 20px;
-  }
-  .website {
-    grid-template-columns: 1fr 1fr;
-    padding: 40px;
-    gap: 60px;
-    max-width: 1000px;
-  }
-  .content {
-    flex-direction: column;
-    align-items: center;
-  }
-  .imgs-logo {
-    flex-direction: column;
-    align-items: center;
-  }
-  .footer {
-    padding: 27px;
-  }
-  .footer-titl {
-    font-size: 15.8px;
-    font-weight: 300;
-  }
+.info-3 {
+  text-align: center;
+  padding: 1em;
+}
+.info-3 a {
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: 10px;
+  color: #101010;
+  text-decoration: none;
+}
+
+.info-3 a:hover {
+  color: #f6e611;
 }
